k8s/companies/tito-client-1/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  tls:
    - hosts:
        - tito-client-1.kagoo.io
  rules:
    - host: tito-client-1.kagoo.io
